@@ -1,3 +1,7 @@
+Sat Mar 22 18:50:45 CET 2003 Daniel Veillard <daniel@veillard.com>
+
+	* relaxng.c: valgrind'ed and cleaned up a couple of memory issues.
+
 Sat Mar 22 16:15:50 CET 2003 Daniel Veillard <daniel@veillard.com>
 
 	* SAX.c: fix bug #107208 avoid false duplicates when ID/REFs are
